# OpenVPNFrontend

./: CMakeLists.txt  README.md
resources/: OpenVPN.desktop  Standalone OpenVPN.desktop  generateSudoerFile.sh  openvpn  openvpn.sh
resources/Gnome/: OpenVPN.desktop  Standalone OpenVPN.desktop
src/: main.cpp
